# gba-sprite-engine

./: CMakeLists.txt  README.md
Project/: CMakeLists.txt  spaceDisaster.gba
Project/src/: ControlRoomScene.cpp  ControlRoomScene.h  Element.cpp  Element.h  Item.cpp  Item.h  NASA_Astronaut_Blue.h  NASA_Astronaut_Green.h  NASA_Astronaut_Purple.h  NASA_Astronaut_Red.h  NASA_Astronaut_White.h  NASA_Astronaut_Yellow.h  PodScene.cpp  PodScene.h  Space1.h  SplashScreen.cpp  SplashScreen.h  SpriteData.h  StartScene.cpp  StartScene.h  crewmate.cpp  crewmate.h  main.cpp  pod_scene.cpp  pod_scene.h  sample_start_scene.cpp  sample_start_scene.h
ProjectAugustusPieterCoenen/: CMakeLists.txt
ProjectAugustusPieterCoenen/src/: Crop.cpp  Crop.h  Farmer.cpp  Farmer.h  HouseScene.cpp  HouseScene.h  InventoryScene.cpp  InventoryScene.h  MainScene.cpp  MainScene.h  SplashScreen.cpp  SplashScreen.h  StartScreen.cpp  StartScreen.h  Tool.cpp  Tool.h  main.cpp
buildProject/Project/: spaceDisaster.elf  spaceDisaster.gba
buildProject/demos/demo1-basicfeatures/: flyingstuff.elf  flyingstuff.gba
buildProject/demos/demo2-arkanoid/: arkanoid.elf  arkanoid.gba
buildProject/demos/demo3-foodthrowing/: foodthrowing.elf  foodthrowing.gba
buildProject/demos/demo4-conway/: conway.elf  conway.gba
demos/demo1-basicfeatures/: CMakeLists.txt
demos/demo1-basicfeatures/src/: main.cpp  sample_start_scene.cpp
engine/: CMakeLists.txt
